# cmake-samples

./: README.md
1_run_cpp/: CMakeLists.txt  README.md  run.sh
1_run_cpp/include/: hello.h
1_run_cpp/src/: hello.cpp
2_pybind/: CMakeLists.txt  build_and_run.sh
2_pybind/include/: add.h
2_pybind/src/: main.cpp
2_pybind/test/: main.py
3_pybind_with_torch/: CMakeLists.txt  build_and_run.sh
3_pybind_with_torch/include/: add.h
3_pybind_with_torch/src/: add.cpp  hello.cpp  main.cpp
3_pybind_with_torch/test/: main.py
